--- a/CSS/login.css
+++ b/CSS/login.css
@@ -64,3 +64,66 @@ body{
 .login-nt{
     background-color: aqua;
 }
+
+.login .title{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    text-align: center;
+    padding: 0 0 30px 0;
+    margin-top: 15px; 
+}
+
+.login h2{
+    margin: 0;
+    padding: 0;
+    font-weight: unset; /* Used to remove bold */
+    display: block;
+}
+
+.login input{
+    width: 100%;
+    height: 50px;
+    margin: 10px 0;
+    border: none;     /* To remove the borders */
+    color: black;
+    border-color: transparent;
+    border-bottom: black 2px solid;
+    font-size: 16px;
+}
+
+.access{
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+    border: none;
+    outline: none;
+    color: black;
+    background-color: rgb(33, 182, 219);
+    font-size: 16px;
+    border-radius: 25px;
+}
+
+.access:hover{
+    background-color: rgb(33, 182, 219, 0.5);
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.login button a{
+    text-decoration: none;
+    color: white;
+}
+
+.login a{
+    display: block;
+    text-decoration: none;
+    font-size: 16px;
+    color: darkgray;
+    margin: 5px 0 0 0;
+}
+
+.login a:hover{
+    color: black;
+}
+
